# build-your-own-lm

./: README.md  pyproject.toml
src/data/: dataset.py
src/model/: gpt.py  tokenizer.py  transformer.py
src/scripts/: run_tokenizer.py
src/scripts/experiments/: scaling_laws.py
src/tests/: test_dataset.py  test_model.py  test_tokenizer.py
