[project]
name = "mini-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.1",
    "datasets>=4.8.5",
    "huggingface>=0.0.1",
    "matplotlib>=3.10.9",
    "mlx-lm>=0.31.3",
    "pytest>=9.0.3",
    "scienceplots>=2.2.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[tool.black]
target-version = ["py313"]
